--- a/css/styles.css
+++ b/css/styles.css
@@ -69,13 +69,27 @@ header nav ul li a {
 	text-align: center;
 	text-overflow: ellipsis;
 }
-
-
 .selected {
 	background: rgba(254,0,187,1.00);
 	transition: all 1s;
 }
 
+.mark::before,
+.mark::after {
+  clip-path: inset(100%);
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+.mark::before {
+  content: " [highlight start] ";
+}
+.mark::after {
+  content: " [highlight end] ";
+}
 
 @media only screen and (min-width: 700px) {
 	
