--- a/css/styles.css
+++ b/css/styles.css
@@ -139,5 +139,21 @@ header nav ul li a {
 	}
 }
 
-
+.thumbnail{
+  width: 100px;
+  height: 100px;
+}
+.thumbnail:hover {
+    position:relative;
+    top:-50px;
+    left:-35px;
+    width:500px;
+    height:auto;
+    display:block;
+    z-index:999;
+    cursor: pointer;
+    -webkit-transition-property: all;
+    -webkit-transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease;
+}
 
