--- a/css/styles.css
+++ b/css/styles.css
@@ -156,54 +156,13 @@ header nav ul li a {
     -webkit-transition-duration: 0.3s;
     -webkit-transition-timing-function: ease;
 }
-#zoomA {
-  /* (A) OPTIONAL DIMENSIONS */
-/*  width: 600px; */
-  width: 100%;
-  height: auto;
- 
-  /* (B) ANIMATE ZOOM */
-  /* ease | ease-in | ease-out | linear */
-  transition: transform ease-in-out 0.3s;
+img {
+  width: 400px;
 }
- 
-/* (C) ZOOM ON HOVER */
-#zoomA:hover { transform: scale(1.2); }
-/* (A) OUTER WRAPPER */
-#zoomBOut {
-  /* (A1) DIMENSIONS */
-  width: 600px;
-  height: 360px;
- 
-  /* (A2) HIDE SCROLLBARS */
-  overflow: hidden;
-}
- 
-/* (B) INNER WRAPPER */
-#zoomBIn {
-  /* (B1) FIT OUTER WRAPPER */
-  width: 100%;
-  height: 100%;
- 
-  /* (B2) BACKGROUND IMAGE */
-  background-image: url("demo.webp");
-  background-position: center;
-  background-size: cover;
- 
-  /* (B3) ANIMATE ZOOM */
-  transition: transform ease 0.3s;
-}
- 
-/* (C) ZOOM ON HOVER */
-#zoomBIn:hover { transform: scale(1.2); }
-
-#zoomC {
-  /* (A) DIMENSIONS */
-  width: 600px;
-  height: 360px;
- 
-  /* (B) BACKGROUND IMAGE */
-  background: url("demo.webp");
-  background-position: center;
-  background-size: cover;
-}
+  .displayed {
+    display: block;
+    margin: 0 auto; 
+  }
+  .border {
+    border: 2px solid #778899;  /* dark grayish blue */
+  }
