--- a/css/styles.css
+++ b/css/styles.css
@@ -173,17 +173,17 @@ html {
 }
 body {
   margin: 0 auto;
-  max-width: 36em;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  max-width: 70em;  /* 36em */
+  padding-left: 20px;  /* 50px */
+  padding-right: 20px;  /* 50px */
+  padding-top: 20px;  /* 50px */
+  padding-bottom: 20px;  /* 50px */
   hyphens: auto;
   overflow-wrap: break-word;
   text-rendering: optimizeLegibility;
   font-kerning: normal;
 }
-
+/* 600px */
 @media (max-width: 600px) {
   body {
     font-size: 0.9em;
