--- a/css/styles.css
+++ b/css/styles.css
@@ -1,276 +1,35 @@
-/* styles.css from UC-Davis-Inter-jQuery of github.com/bbauska/ */
+/* styles.css in uofm-inter-with-javascript - inter-js.bauska.org */
+
 body {
-  font-family: Arial;
-  color: #333;
-  /* padding-top: 200px; */
+  background-color: #eee;
+  font-family: Bahnschrift, Inter, Helvetic, sans-serif, Consolas;
+  font-size: 15px;
+  text-align: left;
+  margin: 10px;
 }
 
-header {
-  background:rgba(217,217,217,0.9);
-  width: 100%;
-  /* position: fixed; */
-  top: 0;
-  height: 160px;
-}
-
-header h1 {
-  text-align: center;
-}
-
-p {
-  line-height: 1.5em;
-}
-
-img {
+img.displayed {
   display: block;
-  max-width: 100%;
+  margin: 0 auto; 
+}
+.border {
+  border: 2px solid #778899;
 }
 
-section {
-  width: 95%;
-  margin: 0 auto 150px auto;
-  padding: 25px;
-  box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.75);
-}
-
-/*************** Navigation Styles ***************/
-header nav {
-	width: 95%;
-	margin: auto;
-}
-
-header nav ul {
-	display: flex;
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-
-header nav ul li {
-	width: 20%;
-	box-sizing: border-box;
-	border-left: 2px solid #666;
-}
-
-header nav ul li:first-of-type{
-	border-left: none;
-}
-
-header nav ul li a {
-	text-decoration: none;
-	display: block;
-	color: #fff;
-	text-transform: uppercase;
-	font-weight: bold;
-	padding: 10px;
-	background: #9C9C9C;
-	white-space: nowrap;
-	overflow: hidden;
-	text-align: center;
-	text-overflow: ellipsis;
-}
-.selected {
-	background: rgba(254,0,187,1.00);
-	transition: all 1s;
-}
-
-.mark::before,
-.mark::after {
-  clip-path: inset(100%);
-  clip: rect(1px, 1px, 1px, 1px);
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-}
-.mark::before {
-  content: " [highlight start] ";
-}
-.mark::after {
-  content: " [highlight end] ";
-}
-
-@media only screen and (min-width: 700px) {
-	
-	/*************** Frist Section Styles ***************/
-	#first article {
-		display: flex;
-		align-items: flex-start;
-	}
-
-	#first article img {
-		margin-left: 25px;
-	}
-	
-	/*************** Second Section Styles ***************/
-	#second div, #fifth div {
-		display: flex;
-		justify-content: space-between;
-	}
-
-	#second article {
-		width: 30%;
-	}
-
-	/*************** Third Section Styles ***************/
-	#third article {
-		display: flex;
-		align-items: flex-start;
-	}
-
-	#third article img {
-		margin-right: 25px;
-	}
-
-	/*************** Fifth Section Styles ***************/
-	#fifth article {
-		width: 47%;
-	}
-
-	#fifth {
-		margin-bottom: 500px;
-	}
-}
-
-@media only screen and (min-width: 1000px) {
-	section, header nav {
-		width: 960px;
-	}
-}
-
-.thumbnail{
-  width: 100px;
-  height: 100px;
-}
-.thumbnail:hover {
-    position:relative;
-    top:-50px;
-    left:-35px;
-    width:500px;
-    height:auto;
-    display:block;
-    z-index:999;
-    cursor: pointer;
-    -webkit-transition-property: all;
-    -webkit-transition-duration: 0.3s;
-    -webkit-transition-timing-function: ease;
-}
-img {
-  width: 400px;
-}
-  .displayed {
-    display: block;
-    margin: 0 auto; 
-  }
-  .border {
-    border: 2px solid #778899;  /* dark grayish blue */
-  }
-
-html {
-  color: #1a1a1a;
-  background-color: #fdfdfd;
-}
-body {
-  margin: 0 auto;
-  max-width: 70em;  /* 36em */
-  padding-left: 20px;  /* 50px */
-  padding-right: 20px;  /* 50px */
-  padding-top: 20px;  /* 50px */
-  padding-bottom: 20px;  /* 50px */
-  hyphens: auto;
-  overflow-wrap: break-word;
-  text-rendering: optimizeLegibility;
-  font-kerning: normal;
-}
-/* 600px */
-@media (max-width: 600px) {
-  body {
-    font-size: 0.9em;
-    padding: 12px;
-  }
-  h1 {
-    font-size: 1.8em;
-  }
-}
-@media print {
-  html {
-    background-color: white;
-  }
-  body {
-    background-color: transparent;
-    color: black;
-    font-size: 12pt;
-  }
-  p, h2, h3 {
-    orphans: 3;
-    widows: 3;
-  }
-  h2, h3, h4 {
-    page-break-after: avoid;
-  }
-}
-
-p {
-  margin: 1em 0;
-}
-a {
-  color: #1a1a1a;
-}
-a:visited {
-  color: #1a1a1a;
-}
-img {
-  max-width: 100%;
-}
-h1, h2, h3, h4, h5, h6 {
-  margin-top: 1.4em;
-}
-h5, h6 {
-  font-size: 1em;
-  font-style: italic;
-}
-h6 {
-  font-weight: normal;
-}
-ol, ul {
-  padding-left: 1.7em;
-  margin-top: 1em;
-}
-li > ol, li > ul {
-  margin-top: 0;
-}
 blockquote {
-  margin: 1em 0 1em 1.7em;
+  margin: .5em 0 .5em .85em;
   padding-left: 1em;
   border-left: 2px solid #e6e6e6;
   color: #606060;
 }
-code {
-  font-family: Menlo, Monaco, Consolas, 'Lucida Console', monospace;
-  font-size: 85%;
-  margin: 0;
-  hyphens: manual;
-}
-pre {
-  margin: 1em 0;
-  overflow: auto;
-}
-pre code {
-  padding: 0;
-  overflow: visible;
-  overflow-wrap: normal;
-}
-.sourceCode {
-  background-color: transparent;
-  overflow: visible;
-}
+
 hr {
-  background-color: #1a1a1a;
+  ground-color: #1a1a1a;
   border: none;
   height: 1px;
   margin: 1em 0;
 }
+
 table {
   margin: 1em 0;
   border-collapse: collapse;
@@ -294,158 +53,141 @@ th {
 td {
   padding: 0.125em 0.5em 0.25em 0.5em;
 }
-header {
-  margin-bottom: 4em;
-  text-align: center;
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 11px;
+  border: none;
+  outline: none;
+  background-color: #8b0000;
+  color: #fdfeff;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 1px;
 }
-#TOC li {
-  list-style: none;
+#myBtn:hover {
+  background-color: #555555;
 }
-#TOC ul {
-  padding-left: 1.3em;
+
+pre {
+  overflow: auto;
+  }
+pre > code {
+  display: block;
+  margin-left: 15px;
+  padding: 1rem;
+  word-wrap: normal;
+  }
+pre, code {
+  font-family: monospace, monospace;
+  font-size: 10px;
+  margin-left: 15px;
 }
-#TOC > ul {
-  padding-left: 0;
-}
-#TOC a:not(:hover) {
+pre:hover, pre:focus { width: min-content; }
+
+a.hover {
+  color: #000000;
+  background-color: #ffff00;
+  text-decoration: underline;
+  }
+a.hover:hover {
+  background-color: #ffff00;
+  text-decoration: underline;
+a:link {
+  color: #013220;
+  background-color: transparent;
   text-decoration: none;
 }
-code{white-space: pre-wrap;}
-span.smallcaps{font-variant: small-caps;}
-div.columns{display: flex; gap: min(4vw, 1.5em);}
-div.column{flex: auto; overflow-x: auto;}
-div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
-
-/* The extra [class] is a hack that increases specificity enough to
-   override a similar rule in reveal.js */
-ul.task-list[class]{list-style: none;}
-ul.task-list li input[type="checkbox"] {
-  font-size: inherit;
-  width: 0.8em;
-  margin: 0 0.8em 0.2em -1.6em;
-  vertical-align: middle;
+a:visited {
+  color: #a5682a;
+  background-color: transparent;
+  text-decoration: none;
 }
-.display.math{display: block; text-align: center; margin: 0.5rem auto;}
-
-/* [1] The container */
-.img-hover-zoom {
-  height: 400px; /* [1.1] Set it as per your need */
-  overflow: hidden; /* [1.2] Hide the overflowing of child elements */
+  
+div {
+  float: left; 
 }
 
-/* [2] Transition property for smooth transformation of images */
-.img-hover-zoom img {
-  transition: transform .5s ease;
+h1 {
+  font-size: 22px;
+  margin-left: 10px;
+}
+h2 { 
+  font-size: 20px;
+  margin-left: 10px;
+}
+h3 { 
+  font-size: 18px;
+  margin-left: 10px;
+}
+h4 { 
+  font-size: 16px;
+  margin-left: 10px;
+}
+h5 { 
+  font-size: 13px;
+  margin-left: 10px;
+}
+h6 { 
+  font-size: 11px;
+  margin-left: 10px;
 }
 
-/* [3] Finally, transforming the image when container gets hovered */
-.img-hover-zoom:hover img {
-  transform: scale(1.5);
+background: linear-gradient(60deg, #3d3393 0%, #2b76b9 37%, #2cacd1 65%, #35eb93 100%)
+
+p {
+  font-size: 15px;
+  font-family: Bahnschrift, Inter, Helvetic, sans-serif, Consolas;
+  text-align: left;
+  margin-left: 10px;
 }
 
-/* Quick-zoom Container */
-.img-hover-zoom--quick-zoom img {
-  transform-origin: 0 0;
-  transition: transform .25s, visibility .25s ease-in;
+ul li { 
+  padding: 10px;
+  line-height: 130%;
+  font-family: Bahnschrift, Inter, Helvetic, sans-serif, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVue Sans Mono";
+}
+ol li {
+  padding: 10px;
+  line-height 130%;
+  font-family: Bahnschrift, Inter, Helvetic, sans-serif, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVue Sans Mono";
 }
 
-/* The Transformation */
-.img-hover-zoom--quick-zoom:hover img {
-  transform: scale(2);
+figure {
+  margin-top: 0;
+}
+figcaption {
+  text-align: center;
 }
 
-/* Point-zoom Container */
-.img-hover-zoom--point-zoom img {
-  transform-origin: 65% 75%;
-  transition: transform 1s, filter .5s ease-out;
+details {
+  font: 13px Inter, sans-serif, Bahnschrift, Calibri;
+  width: 65%;
 }
-
-/* The Transformation */
-.img-hover-zoom--point-zoom:hover img {
-  transform: scale(5);
+summary {
+  font: 13px Inter, sans-serif, Bahnschrift, Calibri;
+  width: 65%;
 }
-
-/* Zoom-n-rotate Container */
-.img-hover-zoom--zoom-n-rotate img {
-  transition: transform .5s ease-in-out;
+details > summary {
+  padding: 2px 6px;
+  width: 15em;
+  background-color: #eee;
+  border: none;
+  box-shadow: 3px 3px 4px #00008b;
+  cursor: pointer;
+  margin-left: 10px;
 }
-
-/* The Transformation */
-.img-hover-zoom--zoom-n-rotate:hover img {
-  transform: scale(2) rotate(25deg);
+details > p {
+  border-radius: 0 0 10px 10px;
+  background-color: #fff;
+  padding: 2px 6px;
+  margin: 0;
+  box-shadow: 3px 3px 4px #00008b;
 }
-
-/* Slow-motion Zoom Container */
-.img-hover-zoom--slowmo img {
-  transform-origin: 50% 65%;
-  transition: transform 5s, filter 3s ease-in-out;
-  filter: brightness(150%);
-}
-
-/* The Transformation */
-.img-hover-zoom--slowmo:hover img {
-  filter: brightness(100%);
-  transform: scale(3);
-}
-
-/* Brightness-zoom Container */
-.img-hover-zoom--brightness img {
-  transition: transform 2s, filter 1.5s ease-in-out;
-  transform-origin: center center;
-  filter: brightness(50%);
-}
-
-/* The Transformation */
-.img-hover-zoom--brightness:hover img {
-  filter: brightness(100%);
-  transform: scale(1.3);
-}
-
-/* Horizontal Zoom-n-pan Container */
-.img-hover-zoom--zoom-n-pan-h img {
-  transition: transform .5s ease-in-out;
-  transform: scale(1.4);
-  transform-origin: 100% 0;
-}
-
-/* The Transformation */
-.img-hover-zoom--zoom-n-pan-h:hover img {
-  transform: scale(1.5) translateX(30%);
-}
-
-/* Vertical Zoom-n-pan Container */
-.img-hover-zoom--zoom-n-pan-v img {
-  transition: transform .5s ease-in-out;
-  transform: scale(1.4);
-  transform-origin: 0 0;
-}
-
-/* The Transformation */
-.img-hover-zoom--zoom-n-pan-v:hover img {
-  transform: scale(1.25) translateY(-30%);
-}
-
-/* Blur-zoom Container */
-.img-hover-zoom--blur img {
-  transition: transform 1s, filter 2s ease-in-out;
-  filter: blur(2px);
-  transform: scale(1.2);
-}
-
-/* The Transformation */
-.img-hover-zoom--blur:hover img {
-  filter: blur(0);
-  transform: scale(1);
-}
-
-/* Colorize-zoom Container */
-.img-hover-zoom--colorize img {
-  transition: transform .5s, filter 1.5s ease-in-out;
-  filter: grayscale(100%);
-}
-
-/* The Transformation */
-.img-hover-zoom--colorize:hover img {
-  filter: grayscale(0);
-  transform: scale(1.1);
+details[open] > summary {
+  background-color: yellow;
 }
