--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* styles.css in uofm-inter-with-javascript - inter-js.bauska.org */
+/* styles.css in uc-davis inter-jquery.bauska.org */
 
 body {
   background-color: #eee;
