--- a/css/styles.css
+++ b/css/styles.css
@@ -1,193 +1,157 @@
-/* styles.css for uc-davis' inter-jquery.bauska.org */
-
-body {
-  background-color: #eee;
-  font-family: Bahnschrift, Inter, Helvetic, sans-serif, Consolas;
-  font-size: 15px;
-  text-align: left;
-  margin: 10px;
-}
-
-img.displayed {
-  display: block;
-  margin: 0 auto; 
-}
-.border {
-  border: 2px solid #778899;
-}
-
-blockquote {
-  margin: .5em 0 .5em .85em;
-  padding-left: 1em;
-  border-left: 2px solid #e6e6e6;
-  color: #606060;
-}
-
-hr {
-  ground-color: #1a1a1a;
-  border: none;
-  height: 1px;
-  margin: 1em 0;
-}
-
-table {
-  margin: 1em 0;
-  border-collapse: collapse;
-  width: 100%;
-  overflow-x: auto;
-  display: block;
-  font-variant-numeric: lining-nums tabular-nums;
-}
-table caption {
-  margin-bottom: 0.75em;
-}
-tbody {
-  margin-top: 0.5em;
-  border-top: 1px solid #1a1a1a;
-  border-bottom: 1px solid #1a1a1a;
-}
-th {
-  border-top: 1px solid #1a1a1a;
-  padding: 0.25em 0.5em 0.25em 0.5em;
-}
-td {
-  padding: 0.125em 0.5em 0.25em 0.5em;
-}
-
-#myBtn {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  font-size: 11px;
-  border: none;
-  outline: none;
-  background-color: #8b0000;
-  color: #fdfeff;
-  cursor: pointer;
-  padding: 10px;
-  border-radius: 1px;
-}
-#myBtn:hover {
-  background-color: #555555;
-}
-
-pre {
-  overflow: auto;
-  }
-pre > code {
-  display: block;
-  margin-left: 15px;
-  padding: 1rem;
-  word-wrap: normal;
-  }
-pre, code {
-  font-family: monospace, monospace;
-  font-size: 10px;
-  margin-left: 15px;
-}
-pre:hover, pre:focus { width: min-content; }
-
-a.hover {
-  color: #000000;
-  background-color: #ffff00;
-  text-decoration: underline;
-  }
-a.hover:hover {
-  background-color: #ffff00;
-  text-decoration: underline;
-a:link {
-  color: #013220;
-  background-color: transparent;
-  text-decoration: none;
-}
-a:visited {
-  color: #a5682a;
-  background-color: transparent;
-  text-decoration: none;
-}
-  
-div {
-  float: left; 
-}
-
-h1 {
-  font-size: 22px;
-  margin-left: 10px;
-}
-h2 { 
-  font-size: 20px;
-  margin-left: 10px;
-}
-h3 { 
-  font-size: 18px;
-  margin-left: 10px;
-}
-h4 { 
-  font-size: 16px;
-  margin-left: 10px;
-}
-h5 { 
-  font-size: 13px;
-  margin-left: 10px;
-}
-h6 { 
-  font-size: 11px;
-  margin-left: 10px;
-}
-
-background: linear-gradient(60deg, #3d3393 0%, #2b76b9 37%, #2cacd1 65%, #35eb93 100%)
-
-p {
-  font-size: 15px;
-  font-family: Bahnschrift, Inter, Helvetic, sans-serif, Consolas;
-  text-align: left;
-  margin-left: 10px;
-}
-
-ul li { 
-  padding: 10px;
-  line-height: 130%;
-  font-family: Bahnschrift, Inter, Helvetic, sans-serif, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVue Sans Mono";
-}
-ol li {
-  padding: 10px;
-  line-height 130%;
-  font-family: Bahnschrift, Inter, Helvetic, sans-serif, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVue Sans Mono";
-}
-
-figure {
-  margin-top: 0;
-}
-figcaption {
-  text-align: center;
-}
-
-details {
-  font: 13px Inter, sans-serif, Bahnschrift, Calibri;
-  width: 65%;
-}
-summary {
-  font: 13px Inter, sans-serif, Bahnschrift, Calibri;
-  width: 65%;
-}
-details > summary {
-  padding: 2px 6px;
-  width: 15em;
-  background-color: #eee;
-  border: none;
-  box-shadow: 3px 3px 4px #00008b;
-  cursor: pointer;
-  margin-left: 10px;
-}
-details > p {
-  border-radius: 0 0 10px 10px;
-  background-color: #fff;
-  padding: 2px 6px;
-  margin: 0;
-  box-shadow: 3px 3px 4px #00008b;
-}
-details[open] > summary {
-  background-color: yellow;
-}
+    html {
+      color: #1a1a1a;
+      background-color: #fdfdfd;
+    }
+    body {
+      margin: 0 auto;
+      max-width: 36em;
+      padding-left: 50px;
+      padding-right: 50px;
+      padding-top: 50px;
+      padding-bottom: 50px;
+      hyphens: auto;
+      overflow-wrap: break-word;
+      text-rendering: optimizeLegibility;
+      font-kerning: normal;
+    }
+<!--    @media (max-width: 600px) { -->
+    @media (max-width: 1000px) {
+      body {
+        font-size: 0.9em;
+        padding: 12px;
+      }
+      h1 {
+        font-size: 1.8em;
+      }
+    }
+    @media print {
+      html {
+        background-color: white;
+      }
+      body {
+        background-color: transparent;
+        color: black;
+        font-size: 12pt;
+      }
+      p, h2, h3 {
+        orphans: 3;
+        widows: 3;
+      }
+      h2, h3, h4 {
+        page-break-after: avoid;
+      }
+    }
+    p {
+      margin: 1em 0;
+    }
+    a {
+      color: #1a1a1a;
+    }
+    a:visited {
+      color: #1a1a1a;
+    }
+    img {
+      max-width: 100%;
+    }
+    h1, h2, h3, h4, h5, h6 {
+      margin-top: 1.4em;
+    }
+    h5, h6 {
+      font-size: 1em;
+      font-style: italic;
+    }
+    h6 {
+      font-weight: normal;
+    }
+    ol, ul {
+      padding-left: 1.7em;
+      margin-top: 1em;
+    }
+    li > ol, li > ul {
+      margin-top: 0;
+    }
+    blockquote {
+      margin: 1em 0 1em 1.7em;
+      padding-left: 1em;
+      border-left: 2px solid #e6e6e6;
+      color: #606060;
+    }
+    code {
+      font-family: Menlo, Monaco, Consolas, 'Lucida Console', monospace;
+      font-size: 85%;
+      margin: 0;
+      hyphens: manual;
+    }
+    pre {
+      margin: 1em 0;
+      overflow: auto;
+    }
+    pre code {
+      padding: 0;
+      overflow: visible;
+      overflow-wrap: normal;
+    }
+    .sourceCode {
+     background-color: transparent;
+     overflow: visible;
+    }
+    hr {
+      background-color: #1a1a1a;
+      border: none;
+      height: 1px;
+      margin: 1em 0;
+    }
+    table {
+      margin: 1em 0;
+      border-collapse: collapse;
+      width: 100%;
+      overflow-x: auto;
+      display: block;
+      font-variant-numeric: lining-nums tabular-nums;
+    }
+    table caption {
+      margin-bottom: 0.75em;
+    }
+    tbody {
+      margin-top: 0.5em;
+      border-top: 1px solid #1a1a1a;
+      border-bottom: 1px solid #1a1a1a;
+    }
+    th {
+      border-top: 1px solid #1a1a1a;
+      padding: 0.25em 0.5em 0.25em 0.5em;
+    }
+    td {
+      padding: 0.125em 0.5em 0.25em 0.5em;
+    }
+    header {
+      margin-bottom: 4em;
+      text-align: center;
+    }
+    #TOC li {
+      list-style: none;
+    }
+    #TOC ul {
+      padding-left: 1.3em;
+    }
+    #TOC > ul {
+      padding-left: 0;
+    }
+    #TOC a:not(:hover) {
+      text-decoration: none;
+    }
+    code{white-space: pre-wrap;}
+    span.smallcaps{font-variant: small-caps;}
+    div.columns{display: flex; gap: min(4vw, 1.5em);}
+    div.column{flex: auto; overflow-x: auto;}
+    div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+    /* The extra [class] is a hack that increases specificity enough to
+       override a similar rule in reveal.js */
+    ul.task-list[class]{list-style: none;}
+    ul.task-list li input[type="checkbox"] {
+      font-size: inherit;
+      width: 0.8em;
+      margin: 0 0.8em 0.2em -1.6em;
+      vertical-align: middle;
+    }
+    .display.math{display: block; text-align: center; margin: 0.5rem auto;}
