--- a/css/styles.css
+++ b/css/styles.css
@@ -1,157 +1,254 @@
-    html {
-      color: #1a1a1a;
-      background-color: #fdfdfd;
-    }
-    body {
-      margin: 0 auto;
-      max-width: 36em;
-      padding-left: 50px;
-      padding-right: 50px;
-      padding-top: 50px;
-      padding-bottom: 50px;
-      hyphens: auto;
-      overflow-wrap: break-word;
-      text-rendering: optimizeLegibility;
-      font-kerning: normal;
-    }
-<!--    @media (max-width: 600px) { -->
-    @media (max-width: 1000px) {
-      body {
-        font-size: 0.9em;
-        padding: 12px;
-      }
-      h1 {
-        font-size: 1.8em;
-      }
-    }
-    @media print {
-      html {
-        background-color: white;
-      }
-      body {
-        background-color: transparent;
-        color: black;
-        font-size: 12pt;
-      }
-      p, h2, h3 {
-        orphans: 3;
-        widows: 3;
-      }
-      h2, h3, h4 {
-        page-break-after: avoid;
-      }
-    }
-    p {
-      margin: 1em 0;
-    }
-    a {
-      color: #1a1a1a;
-    }
-    a:visited {
-      color: #1a1a1a;
-    }
-    img {
-      max-width: 100%;
-    }
-    h1, h2, h3, h4, h5, h6 {
-      margin-top: 1.4em;
-    }
-    h5, h6 {
-      font-size: 1em;
-      font-style: italic;
-    }
-    h6 {
-      font-weight: normal;
-    }
-    ol, ul {
-      padding-left: 1.7em;
-      margin-top: 1em;
-    }
-    li > ol, li > ul {
-      margin-top: 0;
-    }
-    blockquote {
-      margin: 1em 0 1em 1.7em;
-      padding-left: 1em;
-      border-left: 2px solid #e6e6e6;
-      color: #606060;
-    }
-    code {
-      font-family: Menlo, Monaco, Consolas, 'Lucida Console', monospace;
-      font-size: 85%;
-      margin: 0;
-      hyphens: manual;
-    }
-    pre {
-      margin: 1em 0;
-      overflow: auto;
-    }
-    pre code {
-      padding: 0;
-      overflow: visible;
-      overflow-wrap: normal;
-    }
-    .sourceCode {
-     background-color: transparent;
-     overflow: visible;
-    }
-    hr {
-      background-color: #1a1a1a;
-      border: none;
-      height: 1px;
-      margin: 1em 0;
-    }
-    table {
-      margin: 1em 0;
-      border-collapse: collapse;
-      width: 100%;
-      overflow-x: auto;
-      display: block;
-      font-variant-numeric: lining-nums tabular-nums;
-    }
-    table caption {
-      margin-bottom: 0.75em;
-    }
-    tbody {
-      margin-top: 0.5em;
-      border-top: 1px solid #1a1a1a;
-      border-bottom: 1px solid #1a1a1a;
-    }
-    th {
-      border-top: 1px solid #1a1a1a;
-      padding: 0.25em 0.5em 0.25em 0.5em;
-    }
-    td {
-      padding: 0.125em 0.5em 0.25em 0.5em;
-    }
-    header {
-      margin-bottom: 4em;
-      text-align: center;
-    }
-    #TOC li {
-      list-style: none;
-    }
-    #TOC ul {
-      padding-left: 1.3em;
-    }
-    #TOC > ul {
-      padding-left: 0;
-    }
-    #TOC a:not(:hover) {
-      text-decoration: none;
-    }
-    code{white-space: pre-wrap;}
-    span.smallcaps{font-variant: small-caps;}
-    div.columns{display: flex; gap: min(4vw, 1.5em);}
-    div.column{flex: auto; overflow-x: auto;}
-    div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
-    /* The extra [class] is a hack that increases specificity enough to
-       override a similar rule in reveal.js */
-    ul.task-list[class]{list-style: none;}
-    ul.task-list li input[type="checkbox"] {
-      font-size: inherit;
-      width: 0.8em;
-      margin: 0 0.8em 0.2em -1.6em;
-      vertical-align: middle;
-    }
-    .display.math{display: block; text-align: center; margin: 0.5rem auto;}
+/* styles.css in UC-Davis-Inter-jQuery - inter-jquery.bauska.org */
+
+body {
+  background-color: #eee;  /* very light gray */
+  font-family: Bahnschrift, Inter, Helvetic, sans-serif, Consolas;
+  font-size: 15px;  /* 1.2rem; */
+  text-align: left;
+  margin: 15px;
+}
+
+.image-container img {
+  transition: transform 0.3s ease-in-out;
+}
+.image-container img:hover {
+  transform: scale(1.2);
+}
+img.displayed {
+  display: block;
+  margin: 0 auto; 
+}
+.border {
+  border: 2px solid #778899;  /* dark grayish blue */
+}
+
+blockquote {
+  margin: .5em 0 .5em .85em;
+  padding-left: 1em;
+  border-left: 2px solid #e6e6e6;  /* very light gray */
+  color: #606060;  /* very dark gray */
+}
+
+hr {
+  ground-color: #1a1a1a;  /* very dark gray (mostly black) */
+  border: none;
+  height: 1px;
+  margin: 1em 0;
+}
+
+table {
+  margin: 1em 0;
+  border-collapse: collapse;
+  width: 100%;
+  overflow-x: auto;
+  display: block;
+  font-variant-numeric: lining-nums tabular-nums;
+}
+table caption {
+  margin-bottom: 0.75em;
+}
+tbody {
+  margin-top: 0.5em;
+  border-top: 1px solid #1a1a1a;  /* very dark gray (mostly black) */
+  border-bottom: 1px solid #1a1a1a;  /* very dark gray (mostly black) */
+}
+th {
+  border-top: 1px solid #1a1a1a;  /* very dark gray (mostly black) */
+  padding: 0.25em 0.5em 0.25em 0.5em;
+}
+td {
+  padding: 0.125em 0.5em 0.25em 0.5em;
+}
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 11px;
+  border: none;
+  outline: none;
+  background-color: #8b0000;  /* dark red */
+  color: #fdfeff;  /* Very pale (mostly white) blue */
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 1px;
+}
+#myBtn:hover {
+  background-color: #555555;  /* very dark gray */
+}
+
+pre {
+  overflow: auto;
+  }
+pre > code {
+  display: block;
+  margin-left: 15px;
+  padding: 1rem;
+  word-wrap: normal;
+  }
+pre, code {
+  font-family: monospace, monospace;
+  font-size: 10px;
+  margin-left: 15px;
+}
+pre:hover, pre:focus { width: min-content; }
+
+a.hover {
+  color: #000000;  /* white */
+  background-color: #ffff00  /* yellow */
+  text-decoration: underline;
+  }
+a.hover:hover {
+  background-color: #ffff00;  /* pure (or mostly pure) yellow */
+  text-decoration: underline;
+a:link {
+  color: #013220;  /* very dark green */
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  color: #a5682a;  /* brown */
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: #000000;
+  background-color: #ffff00;  /* yellow */
+  text-decoration: underline;
+}
+  
+div {
+  float: left; 
+}
+
+h1 {
+  font-size: 22px;
+  margin-left: 15px;
+}
+h2 { 
+  font-size: 20px;
+  margin-left: 15px;
+}
+h3 { 
+  font-size: 18px;
+  margin-left: 15px;
+}
+h4 { 
+  font-size: 16px;
+  margin-left: 15px;
+}
+h5 { 
+  font-size: 14px;
+  margin-left: 15px;
+}
+h6 { 
+  font-size: 12px;
+  margin-left: 15px;
+}
+
+background: linear-gradient(60deg, #3d3393 0%, #2b76b9 37%, #2cacd1 65%, #35eb93 100%)
+
+p {
+  font-size: 15px;
+  font-family: Bahnschrift, Inter, Helvetic, sans-serif, Consolas;
+  text-align: left;
+  margin-left: 15px;
+}
+p#mediasize {
+  font-size: 15px;
+}
+p#mediasize span {
+  font-size: 10px;
+}
+/* first character in paragraph */
+p:first-child:first-letter{
+float:left;
+font-size:400%;
+margin-top:7px;
+margin-right:5px;
+color:#992E00;
+}
+  
+ul li { 
+  padding: 10px;
+  line-height: 130%;
+  font-family: Bahnschrift, Inter, Helvetic, sans-serif, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVue Sans Mono";
+}
+ol li {
+  padding: 10px;
+  line-height 130%;
+  font-family: Bahnschrift, Inter, Helvetic, sans-serif, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVue Sans Mono";
+}
+
+figure {
+  margin-top: 0;
+}
+figcaption {
+  text-align: center;
+}
+
+details {
+  font: 13px Inter, sans-serif, Bahnschrift, Calibri;
+  width: 65%;
+}
+summary {
+  font: 13px Inter, sans-serif, Bahnschrift, Calibri;
+  width: 65%;
+}
+details > summary {
+  padding: 2px 6px;
+  width: 15em;  /* 12em */
+  background-color: #eee;  /* very light gray */
+  border: none;
+  box-shadow: 3px 3px 4px #00008b;  /* dark blue */
+  cursor: pointer;
+  margin-left: 10px;
+}
+details > p {
+  border-radius: 0 0 10px 10px;
+  background-color: #fff;  /* white */
+  padding: 2px 6px;
+  margin: 0;
+  box-shadow: 3px 3px 4px #00008b;  /* dark blue*/
+}
+details[open] > summary {
+  background-color: yellow;
+}
+<!-- added 11/06/2023 -->
+.box-wrap {
+    width: 100%;
+    height: auto;
+    margin: 20px 0 0 0;
+    -webkit-box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.2);
+    box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.2);
+}
+ul, ol {
+    list-style-position:inside;
+}
+.box-wrap p {
+    font-family:'Open Sans', Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    padding: 5px 30px;
+    overflow: hidden;
+    text-align: left;
+    width: 640px;
+    height: auto;
+    background: #ffffff;
+    color: #717171;
+}
+.box-wrap li {
+    font-family:'Open Sans', Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    padding: 5px 30px;
+    width: 640px;
+    height: auto;
+    background: #ffffff;
+    color: #717171;
+}
+.box-wrap ul li {
+    list-style-type: circle;
+}
+}
