--- a/css/styles.css
+++ b/css/styles.css
@@ -280,11 +280,12 @@ ul, ol {
     li > ol, li > ul {
       margin-top: 0;
     }
-    blockquote {
-      margin: 1em 0 1em 1.7em;
+/* margin: 1em 0 1em 1.7em; *
+  blockquote {
+      margin: .5em 0 .5em .85em;
       padding-left: 1em;
-      border-left: 2px solid #e6e6e6;
-      color: #606060;
+      border-left: 2px solid #e6e6e6;  /* very light gray */
+      color: #606060;  /* very dark gray */
     }
     code {
       font-family: Menlo, Monaco, Consolas, 'Lucida Console', monospace;
