--- a/css/styles.css
+++ b/css/styles.css
@@ -285,7 +285,7 @@ ul, ol {
     li > ol, li > ul {
       margin-top: 0;
     }
-/* margin: 1em 0 1em 1.7em; *
+/* margin: 1em 0 1em 1.7em; */
   blockquote {
       margin: .5em 0 .5em .85em;
       padding-left: 1em;
