--- a/css/styles.css
+++ b/css/styles.css
@@ -159,9 +159,14 @@ p {
   margin-left: 15px;
 }
   
-ul, ol > li { 
+ul > li { 
   padding: 10px;
-  line-height: 130%;
+  line-height: 135%;
+  font-family: Bahnschrift, Inter, Helvetic, sans-serif, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVue Sans Mono";
+}
+ol > li { 
+  padding: 10px;
+  line-height: 135%;
   font-family: Bahnschrift, Inter, Helvetic, sans-serif, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVue Sans Mono";
 }
 
