--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body {
   font-family: Bahnschrift, Inter, Helvetic, sans-serif, Consolas;
   font-size: 15px;  /* 1.2rem; */
   text-align: left;
-  margin: 15px;
+  margin-left: 15px;
 }
 
 img.displayed {
